# BioSim_G21_Julie_Marisha

./: .gitignore  README.md
BioSim_G21_Julie_Marisha/: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
BioSim_G21_Julie_Marisha/doc/: conf.py  index.rst
BioSim_G21_Julie_Marisha/doc/_build/doctrees/: environment.pickle  index.doctree
BioSim_G21_Julie_Marisha/doc/_build/html/: .buildinfo  examples.html  genindex.html  index.html  maths.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
BioSim_G21_Julie_Marisha/doc/examples/: bio500years.rst  checkerboard_migration_demo.rst  population_generator.rst
BioSim_G21_Julie_Marisha/doc/installation/: guide.rst
BioSim_G21_Julie_Marisha/doc/modules/: animal.rst  rossumoya.rst  simulation.rst
BioSim_G21_Julie_Marisha/docs/_build/doctrees/: environment.pickle  index.doctree
BioSim_G21_Julie_Marisha/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  (+2 more)
BioSim_G21_Julie_Marisha/docs/examples/: population_generator.rst
BioSim_G21_Julie_Marisha/examples/: biosim_demo.py  biosim_movie.py  check_sim.py  checkerboard_migration_demo.py  population_generator.py
BioSim_G21_Julie_Marisha/src/biosim/: __init__.py  animal.py  animals.py  biosim_movie.py  cell.py  landscape.py  my_random.py  random.py  rossumoya.py  simulation.py  visualization.py
BioSim_G21_Julie_Marisha/tests/: test_andvanced.py  test_animal.py  test_animals.py  test_biosim_interface.py  test_cell.py  test_landscape.py  test_rossumoya.py  test_simulation.py  test_visualization.py
(+55 files in other folders)
