[metadata]
name = biosim
description = A population dynamics simulation written in Python
long_description = file: README.rst
author = Julie Forrisdal & Marisha Gnanaseelan
author_email = juforris@nmbu.nuo & magn@nmbu.no

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    matplotlib
    numpy
    pandas
    black

[options.packages.find]
where=src