[metadata]
name = biosim
description = A population dynamics simulation written in Python
long_description = file: README.md
author = Julie Forrisdal & Marisha Gnanaseelan
author_email = juforris@nmbu.no & magn@nmbu.no

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    matplotlib
    numpy
    pandas
    pytest

[options.packages.find]
where=src